# serializer version: 1
# name: TestDifficalcyCatchDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'total': 5.558792283875983,
      }),
      performance_values=dict({
        'total': 251.9667916232263,
      }),
    ),
  ])
# ---
# name: TestDifficalcyCatchDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='Unknown',
    author='Unknown Creator',
    base_velocity=1.6,
    common_bpm=120,
    difficulty_name='Normal',
    difficulty_settings=dict({
      'approach_rate': 8.3,
      'circle_size': 4,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'banana_showers': 3,
      'fruits': 78,
      'juice_streams': 12,
    }),
    length=45250,
    max_combo=127,
    maximum_bpm=120,
    mininum_bpm=120,
    tick_rate=1,
    title='Unknown',
  )
# ---
# name: TestDifficalcyDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'aim': 3.1937041011298932,
        'flashlight': 0,
        'reading': 2.2677129200513817,
        'speed': 3.2050150199896934,
        'total': 6.807337049355327,
      }),
      performance_values=dict({
        'accuracy': 76.39198250136346,
        'aim': 140.6780682198466,
        'flashlight': 0,
        'reading': 39.99315099496238,
        'speed': 99.96696718238928,
        'total': 355.59565390082133,
      }),
    ),
    Calculation(
      difficulty_values=dict({
        'aim': 3.5050329294225295,
        'flashlight': 0,
        'reading': 3.5068803290665436,
        'speed': 3.2050150199896934,
        'total': 7.847419367772647,
      }),
      performance_values=dict({
        'accuracy': 153.77871150610736,
        'aim': 185.10222552269622,
        'flashlight': 0,
        'reading': 148.03370587311184,
        'speed': 112.91956589946582,
        'total': 593.1420963420136,
      }),
    ),
    Calculation(
      difficulty_values=dict({
        'aim': 3.5050329294225295,
        'flashlight': 0,
        'reading': 3.5068803290665436,
        'speed': 3.2050150199896934,
        'total': 7.847419367772647,
      }),
      performance_values=dict({
        'accuracy': 196.7575900462558,
        'aim': 216.4680633951441,
        'flashlight': 0,
        'reading': 172.51339791059021,
        'speed': 131.66593696187266,
        'total': 709.4880048052121,
      }),
    ),
    Calculation(
      difficulty_values=dict({
        'aim': 3.479489536033154,
        'flashlight': 0,
        'reading': 1.3234653901547098,
        'speed': 1.9072886206561863,
        'total': 6.029002059208043,
      }),
      performance_values=dict({
        'accuracy': 12.368997155942548,
        'aim': 66.53597103007891,
        'flashlight': 0,
        'reading': 2.0996401926291215,
        'speed': 6.53088030445052,
        'total': 91.76220130165142,
      }),
    ),
  ])
# ---
# name: TestDifficalcyDifficultyCalculator.test_context_manager
  list([
    Calculation(
      difficulty_values=dict({
        'aim': 2.2983087881161457,
        'flashlight': 0,
        'reading': 0.8254556901364852,
        'speed': 2.242362202731354,
        'total': 4.642935397526102,
      }),
      performance_values=dict({
        'accuracy': 35.44074350552416,
        'aim': 61.0298998730125,
        'flashlight': 0,
        'reading': 2.249786405337901,
        'speed': 40.37387746421139,
        'total': 140.62719583837497,
      }),
    ),
  ])
# ---
# name: TestDifficalcyManiaDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'total': 2.797245912537965,
      }),
      performance_values=dict({
        'difficulty': 43.17076331130473,
        'total': 21.585381655652366,
      }),
    ),
  ])
# ---
# name: TestDifficalcyManiaDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='Unknown',
    author='Unknown Creator',
    base_velocity=1.6,
    common_bpm=120,
    difficulty_name='Normal',
    difficulty_settings=dict({
      'accuracy': 7,
      'drain_rate': 5,
      'key_count': 4,
    }),
    hitobject_counts=dict({
      'hold_notes': 14,
      'notes': 123,
    }),
    length=30500,
    max_combo=151,
    maximum_bpm=120,
    mininum_bpm=120,
    tick_rate=1,
    title='Unknown',
  )
# ---
# name: TestDifficalcyOsuDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'aim': 3.1937041011298932,
        'flashlight': 0,
        'reading': 2.2677129200513817,
        'speed': 3.2050150199896934,
        'total': 6.807337049355327,
      }),
      performance_values=dict({
        'accuracy': 76.39198250136346,
        'aim': 140.6780682198466,
        'flashlight': 0,
        'reading': 39.99315099496238,
        'speed': 99.96696718238928,
        'total': 355.59565390082133,
      }),
    ),
  ])
# ---
# name: TestDifficalcyOsuDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='senya',
    author='Satellite',
    base_velocity=1.7,
    common_bpm=138,
    difficulty_name='Marathon',
    difficulty_settings=dict({
      'accuracy': 6,
      'approach_rate': 8,
      'circle_size': 4,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'circles': 1093,
      'slider_ticks': 346,
      'sliders': 659,
      'spinners': 1,
    }),
    length=678047,
    max_combo=2758,
    maximum_bpm=168,
    mininum_bpm=121,
    tick_rate=2,
    title='Songs Compilation',
  )
# ---
# name: TestDifficalcyPerformancePlusDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'accuracy': 1.0546478295311437,
        'aim': 2.8804685309467284,
        'flowAim': 1.6727417520197583,
        'jumpAim': 2.8763118223866133,
        'precision': 1.714528074416766,
        'speed': 3.179656468968935,
        'stamina': 2.8045880770770752,
        'total': 6.123075221732318,
      }),
      performance_values=dict({
        'accuracy': 87.89378488351228,
        'aim': 68.38232334186907,
        'flowAim': 13.391867347855435,
        'jumpAim': 68.08670955755021,
        'precision': 14.420763347653594,
        'speed': 99.53445865488443,
        'stamina': 68.30305130767819,
        'total': 259.5756907401086,
      }),
    ),
  ])
# ---
# name: TestDifficalcyPerformancePlusDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='senya',
    author='Satellite',
    base_velocity=1.7,
    common_bpm=138,
    difficulty_name='Marathon',
    difficulty_settings=dict({
      'accuracy': 6,
      'approach_rate': 8,
      'circle_size': 4,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'circles': 1093,
      'slider_ticks': 346,
      'sliders': 659,
      'spinners': 1,
    }),
    length=678047,
    max_combo=2758,
    maximum_bpm=168,
    mininum_bpm=121,
    tick_rate=2,
    title='Songs Compilation',
  )
# ---
# name: TestDifficalcyTaikoDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'colour': 0.6959476519816311,
        'rhythm': 0.036345782364528685,
        'stamina': 2.92600418556215,
        'total': 4.62442626042808,
      }),
      performance_values=dict({
        'accuracy': 228.45802060123032,
        'difficulty': 119.8564106673233,
        'total': 348.3144312685536,
      }),
    ),
  ])
# ---
# name: TestDifficalcyTaikoDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='Unknown',
    author='Unknown Creator',
    base_velocity=1.6,
    common_bpm=120,
    difficulty_name='Normal',
    difficulty_settings=dict({
      'accuracy': 7,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'drum_rolls': 30,
      'hits': 200,
      'swells': 8,
    }),
    length=53000,
    max_combo=200,
    maximum_bpm=120,
    mininum_bpm=120,
    tick_rate=1,
    title='Unknown',
  )
# ---
